{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 10,
  "lineage": "eba2f307-b8ef-3b78-ba88-6feb7a680047",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:internet-gateway/igw-0dbea852a8dcea129",
            "id": "igw-0dbea852a8dcea129",
            "owner_id": "205930612901",
            "region": "us-east-1",
            "vpc_id": "vpc-0baa36741657e75b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dbea852a8dcea129",
            "id": "r-rtb-0ff1c7f42a5d3f04f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0ff1c7f42a5d3f04f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0ff1c7f42a5d3f04f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:route-table/rtb-0f5aa07cf97dfdef2",
            "id": "rtb-0f5aa07cf97dfdef2",
            "owner_id": "205930612901",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0baa36741657e75b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "id": "rtb-0f5aa07cf97dfdef2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:route-table/rtb-0ff1c7f42a5d3f04f",
            "id": "rtb-0ff1c7f42a5d3f04f",
            "owner_id": "205930612901",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0baa36741657e75b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "id": "rtb-0ff1c7f42a5d3f04f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e2a6506aa527dd7",
            "region": "us-east-1",
            "route_table_id": "rtb-0f5aa07cf97dfdef2",
            "subnet_id": "subnet-0476a11d999b7b279"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001a57297e1423491",
            "region": "us-east-1",
            "route_table_id": "rtb-0ff1c7f42a5d3f04f",
            "subnet_id": "subnet-0b0c9bd3e1a4a329f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:subnet/subnet-0476a11d999b7b279",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0476a11d999b7b279",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "205930612901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0baa36741657e75b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "id": "subnet-0476a11d999b7b279",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:subnet/subnet-0b0c9bd3e1a4a329f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0c9bd3e1a4a329f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "205930612901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0baa36741657e75b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "id": "subnet-0b0c9bd3e1a4a329f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:vpc/vpc-0baa36741657e75b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d0e299010544534",
            "default_route_table_id": "rtb-05f6598e30c000bd6",
            "default_security_group_id": "sg-0a480471844b8a23f",
            "dhcp_options_id": "dopt-036370348dc4b1a4a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0baa36741657e75b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f6598e30c000bd6",
            "owner_id": "205930612901",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "id": "vpc-0baa36741657e75b3",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}